--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,10 @@
   color: indianred !important;
 
 }
+.container-fluid>.navbar-collapse, .container-fluid>.navbar-header, .container>.navbar-collapse, .container>.navbar-header {
+    margin-right: 0px!important;
+    margin-left: 0px!important;
+}
  
 
    /* About Section*/
